--- a/.github/workflow/dev-workflow.yaml
+++ b/.github/workflow/dev-workflow.yaml
@@ -1,5 +1,11 @@
-name: "Deployment"
-
+name: deployyment
+on: 
+  push:
+     branches: [main]
+  pull_request:
+      branches: [main]
+  workflow_dispatch:
+  
 jobs:
    run-ons: ubuntu-latest
    steps: 
