add variable n gitaction.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Run a shell script
+      - name:  Check repository 
+        uses: actions/checkout@v4
+      - name: Run a shell script 
         env:
-          GIT_USER_NAME: Mario Carlos Chita
+          GIT_USER_OWNER: ${{env.GIT_USER_OWNER}}
         run: echo "$GIT_USER_NAME"
